--- a/noisysettings.ui
+++ b/noisysettings.ui
@@ -9,12 +9,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>287</width>
+    <height>369</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>NoisyLCD Settings</string>
   </property>
   <widget class="QDial" name="dial">
    <property name="geometry">
