Custom spinbox implementation for tone setting
Adds a custom QDoubleSpinBox subclass which overrides step behavior, so
that we can step to the next given tone rather than by a static increment.

--- a/noisysettings.ui
+++ b/noisysettings.ui
@@ -48,7 +48,7 @@
     <string>Refresh rate (Hz)</string>
    </property>
   </widget>
-  <widget class="QDoubleSpinBox" name="tone">
+  <widget class="ToneSpinBox" name="tone">
    <property name="geometry">
     <rect>
      <x>170</x>
@@ -78,6 +78,13 @@
    </property>
   </widget>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>ToneSpinBox</class>
+   <extends>QDoubleSpinBox</extends>
+   <header>tonespinbox.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
